Fix spacing for special consecutive sections with no heading

--- a/assets/base.css
+++ b/assets/base.css
@@ -231,36 +231,27 @@ html.no-js .no-js-hidden {
 
 /* Special section spacing rules */
 
-.section-collage + .section-collage {
-  margin-top: var(--grid-mobile-vertical-spacing);
-}
-
-.section-collage + .section-collection-list {
+.section-collage + .section-collage,
+.section-collage + .section-collection-list,
+.section-collection-list + .section-collection-list,
+.section-collection-list + .section-collage {
   margin-top: var(--grid-mobile-vertical-spacing);
 }
 
 @media screen and (min-width: 750px) {
-  .section-collage + .section-collage {
-    margin-top: var(--grid-desktop-vertical-spacing);
-  }
-  
-  .section-collage + .section-collection-list {
+  .section-collage + .section-collage,
+  .section-collage + .section-collection-list,
+  .section-collection-list + .section-collection-list,
+  .section-collection-list + .section-collage {
     margin-top: var(--grid-desktop-vertical-spacing);
   }
 }
 
-.section-heading {
+.section-heading,
+.section-heading.title,
+.section-heading.title-wrapper-with-link,
+.section-heading.title--primary {
   margin-top: 0;
-}
-
-.section {
-  outline: 4px solid red;
-  outline-offset: -4px;
-}
-
-.section-no-margin {
-  outline: 4px solid blue;
-  outline-offset: -4px;
 }
 
 .element-margin {
